--- a/sito/index.html
+++ b/sito/index.html
@@ -5,7 +5,7 @@
         <title>La mia prima pagina html</title>
         <style>
             p {
-                background-color: orange;
+                background-color: rgb(227, 217, 197);
                 padding: 30px;
             }
             #title_1 {
